# Atlas-Translator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: AppPaths.cpp  AppPaths.h  AtlasImporter.cpp  AtlasImporter.h  DatabaseManager.cpp  DatabaseManager.h  DatasetScanner.cpp  DatasetScanner.h  LanguageNormalizer.cpp  LanguageNormalizer.h  QueryCache.cpp  QueryCache.h  TextNormalizer.cpp  TextNormalizer.h  Tokenizer.cpp  Tokenizer.h  TranslatorEngine.cpp  TranslatorEngine.h  Utf8Streams.h
